--- a/Codes/index.html
+++ b/Codes/index.html
@@ -18,7 +18,7 @@
     <h4 ><b>COMPUTATIONAL LINGUISTICS LAB</b></h4>
     </div>
     <div class="heading2">
-    <h3 ><b>Forming Sentences-2</b></h3>
+    <h3 ><strong>Forming Sentences-2</strong></h3>
     </div>
     <!-- creating buttons in nav_bar just for layout purpose -->
     <nav class="nav_bar bg-dark" > 
